-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.168 2007-12-21 20:27:13 remko Exp $
-----------------------------------------------------------------------------------------

2007-12-21	remko
	* gmt_init.c:		Made central longitude optional in cylindrical projections.
				Made Mercator to have 1, 2, or 3 arguments.
				Allow optional standard parallel in cylindrical equidistant (-JQ).
				Added cyclindrical stereographic projection.
				Optionally use names for projections. Updated usage info.
	* explain_-J*.txt, psbasemap.txt:	Updated accordingly.
	* gmt_support.[ch]:	Added GMT_strlcmp in support of GMT_project_type
	* gmt_map.c:		When central meridian is NaN, replace it by center of longitude range.
				Added initialization of cylindrical stereographic projections
	* gmt_proj.c:		Simplified GMT_vmerc. Use central meridian and standard parallel as input.
				Added cylindrical stereographic projection functions
	* gmt_project.h:	Changed the numbering of projection IDs. Added GMT_CYL_STEREO
				Consolidated all cyclindrical projection parameters into one set of four.
	* gmt_grdio.c, mgd77manage.c:	Use the new three parameters of Mercator initialization.
	* *.c:			Avoid using numbers for projections and add GMT_CYL_STEREO where needed.

2007-12-18	remko
	* gmtalldeps.macros, makefile:	Properly identify all unusual dependencies of sources.
	* spotter/grdrotimage.c:	Removed from CVS, not used by anything

2007-12-16	pwessel
	* gmt_plot.c:		3-D basemap axis did not use LABEL_OFFSET

2007-12-13	remko
	* pslegend.c:		Use unique names pslegend_$$.bat and pslegend_$$.txt (was GMT$$.bat and
				pslegend_tmp.txt). Write them in GMT_TMPDIR if defined.

2007-12-12	pwessel
	* pshistogram.c:	The -R option was processed separately and did not understand time coordinates.

2007-12-11	pwessel
	* psxy.c:		Now, -D applies to all symbols, lines, and polygons
	* psxyz.c:		New option -D with similar purpose as for psxy
